<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/tie_title_register_fragment"
        style="@style/toolbar_activities"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/v_back_bottom_register_fragment"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/baseline_keyboard_backspace_24"
            app:tint="@color/iconsColorAccent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title_user_data_fragment"
            style="@style/bar_top_information"
            android:text="@string/title_register_fragment" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tie_title_register_fragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/iet_space_iet_register_fragment">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_name_register_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:maxLength="20"
                    android:hint="@string/name_register_fragment"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/iet_space_iet_register_fragment">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_surname_register_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:maxLength="20"
                    android:hint="@string/surname_register_fragment"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/iet_space_iet_register_fragment">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_second_surname_register_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:maxLength="20"
                    android:hint="@string/second_surname_register_fragment"/>

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/iet_space_iet_register_fragment">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/tie_gender_male_register_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/male_register_fragment"/>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/tie_gender_female_register_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/female_register_fragment"/>

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/iet_space_iet_register_fragment">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_mobile_register_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/mobile_register_fragment"
                    android:maxLength="9"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/iet_space_iet_register_fragment">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_description_register_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_description"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/iet_space_iet_register_fragment">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_email_register_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:maxLength="50"
                    android:hint="@string/email_register_fragment"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/iet_space_iet_register_fragment">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_password_register_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:hint="@string/password_register_fragment"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/iet_space_iet_register_fragment">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_dni_register_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:maxLength="9"
                    android:hint="@string/dni_register_fragment"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/iet_space_iet_register_fragment">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_nie_register_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:maxLength="9"
                    android:hint="@string/nie_register_fragment"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/iet_space_iet_register_fragment">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_passport_register_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:maxLength="15"
                    android:hint="@string/passport_register_fragment"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/iet_space_iet_register_fragment">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_birthday_register_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:ems="10"
                    android:hint="@string/birthdate_register_fragment"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/iet_space_iet_register_fragment">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/tie_municipality_register_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/municipality_register_fragment"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/iet_space_iet_register_fragment">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_address_register_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:maxLength="50"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cb_workPermit_register_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/work_permit_register_fragment"/>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cb_autonomousDischarge_register_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/autonomous_discharger_register_fragment"/>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cb_ownVehicle_register_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/own_vehicle_register_fragment"/>

            <Button
                android:id="@+id/btn_complete_register_fragment"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/btn_register_fragment"
                android:textColor="@color/white"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/pb_register_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
