<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/tie_title_user_detail_fragment"
        style="@style/toolbar_activities"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/v_back_bottom_user_data"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/baseline_keyboard_backspace_24"
            android:backgroundTint="@color/black" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title_user_data_fragment"
            style="@style/bar_top_information"
            android:text="@string/title_user_data_fragment" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <View
                android:id="@+id/tv_botton_save_user_detail_fragment"
                style="@style/bar_top_bottom_style"
                android:background="@drawable/baseline_save_24"
                android:backgroundTint="@color/azul_candidatura" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tie_title_user_detail_fragment">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/cl_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/iet_space_iet_register_fragment">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_name_user_detail_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_register_fragment"
                    android:maxLength="20"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/iet_space_iet_register_fragment">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_surname_user_detail_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/surname_register_fragment"
                    android:maxLength="20"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/iet_space_iet_register_fragment">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_second_surname_user_detail_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/second_surname_register_fragment"
                    android:maxLength="20"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/iet_space_iet_register_fragment"
                android:orientation="horizontal">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/tie_gender_male_user_detail_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/male_register_fragment"
                    android:maxLines="1" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/tie_gender_female_user_detail_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/female_register_fragment"
                    android:maxLines="1" />

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/iet_space_iet_register_fragment">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_mobile_user_detail_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_register_fragment"
                    android:maxLines="1"
                    android:maxLength="9"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/iet_space_iet_register_fragment">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_description_user_detail_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_description"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/iet_space_iet_register_fragment">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_dni_user_detail_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dni_register_fragment"
                    android:maxLength="9"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/iet_space_iet_register_fragment">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_nie_user_detail_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nie_register_fragment"
                    android:maxLength="9"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/iet_space_iet_register_fragment">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_passport_user_detail_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/passport_register_fragment"
                    android:maxLength="15"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tie_birthDate_user_detail_fragment"
                style="@style/SpinnerStyle"
                android:hint="@string/birthdate_user" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/iet_space_iet_register_fragment">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/tie_municipality_user_detail_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/municipality_register_fragment"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/iet_space_iet_register_fragment">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_address_user_detail_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:maxLength="50"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cb_workPermit_user_detail_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/work_permit_register_fragment"
                android:maxLines="1" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cb_autonomousDischarge_user_detail_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/autonomous_discharger_register_fragment"
                android:maxLines="1" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cb_ownVehicle_user_detail_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/own_vehicle_register_fragment"
                android:maxLines="1" />


        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/pb_user_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>